force-app/main/default/objects/cve__BenefitClaimed__c/cve__BenefitClaimed__c.object-meta.xml
<CustomObject>
    <customHelpPage>cve__BenefitClaimedHelp</customHelpPage>
    <label>Benefit Claimed</label>
    <nameField>
        <displayFormat>BC-{YYYY}-{000000}</displayFormat>
        <label>Benefit Claimed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits Claimed</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>