force-app/main/default/objects/cve__BenefitClaimed__c/fields/Benefit_Claimed_Owner__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Claimed_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Claimed Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Benefits_Claimed</relationshipName>
    <type>Lookup</type>
</CustomField>