force-app/main/default/objects/cve__BenefitClaimed__c/fields/Benefit_code__c.field-meta.xml
<CustomField>
    <fullName>Benefit_code__c</fullName>
    <label>Benefit code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>