force-app/main/default/objects/cve__BenefitClaimed__c/fields/Claim_Assessment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Assessment_Start_Date__c</fullName>
    <label>Claim Assessment Start Date</label>
    <type>Date</type>
</CustomField>