force-app/main/default/objects/cve__BenefitClaimed__c/fields/Claim_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Effective_Date__c</fullName>
    <label>Claim Effective Date</label>
    <type>Date</type>
</CustomField>