force-app/main/default/objects/cve__BenefitClaimed__c/fields/Claim_Stage__c.field-meta.xml
<CustomField>
    <fullName>Claim_Stage__c</fullName>
    <label>Claim Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim Preparation</fullName>
            </value>
            <value>
                <fullName>Documents Outstanding</fullName>
            </value>
            <value>
                <fullName>Claim Evaluation</fullName>
            </value>
            <value>
                <fullName>Contract Validation</fullName>
            </value>
            <value>
                <fullName>Medical Evaluation</fullName>
            </value>
            <value>
                <fullName>Claim Decision</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
            <value>
                <fullName>Correspondence Preparation</fullName>
            </value>
            <value>
                <fullName>Payment and Correspondence Preparation</fullName>
            </value>
            <value>
                <fullName>Payment Calculation</fullName>
            </value>
            <value>
                <fullName>PDD Authorization Pending</fullName>
            </value>
            <value>
                <fullName>Payment Pending Approval</fullName>
            </value>
            <value>
                <fullName>Payment in Process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>