force-app/main/default/objects/cve__BenefitClaimed__c/fields/Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim Received</fullName>
            </value>
            <value>
                <fullName>Claim Registered</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Claim Deferred</fullName>
                <isActive>false</isActive>
                <label>Claim Deferred</label>
            </value>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>No Claim - DC</fullName>
                <isActive>false</isActive>
                <label>No Claim - DC</label>
            </value>
            <value>
                <fullName>No Claim - LBC</fullName>
                <isActive>false</isActive>
                <label>No Claim - LBC</label>
            </value>
            <value>
                <fullName>Paid</fullName>
                <isActive>false</isActive>
                <label>Paid</label>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
                <isActive>false</isActive>
                <label>Partially Paid</label>
            </value>
            <value>
                <fullName>Repudiated - DC</fullName>
                <isActive>false</isActive>
                <label>Repudiated - DC</label>
            </value>
            <value>
                <fullName>Repudiated - LBC</fullName>
                <isActive>false</isActive>
                <label>Repudiated - LBC</label>
            </value>
            <value>
                <fullName>Reversed</fullName>
                <isActive>false</isActive>
                <label>Reversed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>