force-app/main/default/objects/cve__BenefitClaimed__c/fields/Claim_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Claim_Status_Reason__c</fullName>
    <label>Claim Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Claim_Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Claim Assessment</fullName>
            </value>
            <value>
                <fullName>Information requested: Claim Assessment</fullName>
            </value>
            <value>
                <fullName>Information requested: Contract Validation</fullName>
            </value>
            <value>
                <fullName>Claim assessment referral: Internal Department</fullName>
            </value>
            <value>
                <fullName>Information received</fullName>
            </value>
            <value>
                <fullName>Adjustment of claim</fullName>
            </value>
            <value>
                <fullName>Reversal of finalised claim</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Registered</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Accidental death benefit.  Natural cause of death</fullName>
                <isActive>false</isActive>
                <label>Accidental death benefit.  Natural cause of death</label>
            </value>
            <value>
                <fullName>Benefit definition not met</fullName>
                <isActive>false</isActive>
                <label>Benefit definition not met</label>
            </value>
            <value>
                <fullName>Benefit doesn&apos;t exist</fullName>
                <isActive>false</isActive>
                <label>Benefit doesn&apos;t exist</label>
            </value>
            <value>
                <fullName>Conditions not covered by benefits</fullName>
                <isActive>false</isActive>
                <label>Conditions not covered by benefits</label>
            </value>
            <value>
                <fullName>Contractual Stipulations</fullName>
                <isActive>false</isActive>
                <label>Contractual Stipulations</label>
            </value>
            <value>
                <fullName>Cover not in force</fullName>
                <isActive>false</isActive>
                <label>Cover not in force</label>
            </value>
            <value>
                <fullName>DC: Unclaimed benefit</fullName>
                <isActive>false</isActive>
                <label>DC: Unclaimed benefit</label>
            </value>
            <value>
                <fullName>Date of death before contractual date</fullName>
                <isActive>false</isActive>
                <label>Date of death before contractual date</label>
            </value>
            <value>
                <fullName>Declined as the waiting period has not yet expired</fullName>
                <isActive>false</isActive>
                <label>Declined as the waiting period has not yet expired</label>
            </value>
            <value>
                <fullName>Duplicate</fullName>
                <isActive>false</isActive>
                <label>Duplicate</label>
            </value>
            <value>
                <fullName>Ex-gratia</fullName>
                <isActive>false</isActive>
                <label>Ex-gratia</label>
            </value>
            <value>
                <fullName>Ex-gratia Decision</fullName>
                <isActive>false</isActive>
                <label>Ex-gratia Decision</label>
            </value>
            <value>
                <fullName>Fraud</fullName>
                <isActive>false</isActive>
                <label>Fraud</label>
            </value>
            <value>
                <fullName>General exclusions</fullName>
                <isActive>false</isActive>
                <label>General exclusions</label>
            </value>
            <value>
                <fullName>Misrepresentation</fullName>
                <isActive>false</isActive>
                <label>Misrepresentation</label>
            </value>
            <value>
                <fullName>No benefit payable</fullName>
                <isActive>false</isActive>
                <label>No benefit payable</label>
            </value>
            <value>
                <fullName>Non Disclosure with Loading</fullName>
                <isActive>false</isActive>
                <label>Non Disclosure with Loading</label>
            </value>
            <value>
                <fullName>Non Disclosure without Loading</fullName>
                <isActive>false</isActive>
                <label>Non Disclosure without Loading</label>
            </value>
            <value>
                <fullName>Non-disclosure/Deterioration in risk</fullName>
                <isActive>false</isActive>
                <label>Non-disclosure/Deterioration in risk</label>
            </value>
            <value>
                <fullName>Non-disclosure/Deterioration in risk/Misrepresentation</fullName>
                <isActive>false</isActive>
                <label>Non-disclosure/Deterioration in risk/Misrepresentation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>