force-app/main/default/objects/cve__BenefitClaimed__c/fields/Contract_Validation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Validation_End_Date__c</fullName>
    <label>Contract Validation End Date</label>
    <type>Date</type>
</CustomField>