force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ActualBenefitStart__c.field-meta.xml
<CustomField>
    <fullName>cve__ActualBenefitStart__c</fullName>
    <description>The actual Benefit Start Date, which is the Adjusted Benefit Start if used, the Benefit Start otherwise.</description>
    <formula>IF(ISBLANK(cve__AdjustedBenefitStart__c), cve__BenefitStart__c, cve__AdjustedBenefitStart__c)</formula>
    <inlineHelpText>The actual Benefit Start Date, which is the Adjusted Benefit Start if used, the Benefit Start otherwise.</inlineHelpText>
    <label>Actual Benefit Start</label>
    <type>Date</type>
</CustomField>