force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ActualDateOfDelivery__c.field-meta.xml
<CustomField>
    <fullName>cve__ActualDateOfDelivery__c</fullName>
    <label>Actual Date of Delivery</label>
    <type>Date</type>
</CustomField>