force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AdaptiveHomeVehicleMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__AdaptiveHomeVehicleMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__AdaptiveHomeVehicleAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__AdaptiveHomeVehiclePercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__AdaptiveHomeVehicleAmountMaximum__c,  cve__Benefit__r.cve__AdaptiveHomeVehiclePercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__AdaptiveHomeVehicleAmountMaximum__c),
        cve__Benefit__r.cve__AdaptiveHomeVehicleAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__AdaptiveHomeVehiclePercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__AdaptiveHomeVehiclePercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Adaptive Home &amp; Vehicle Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>