force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AdjustedAmountForDistribution__c.field-meta.xml
<CustomField>
    <fullName>cve__AdjustedAmountForDistribution__c</fullName>
    <inlineHelpText>Adjusted Amount After Adjustments minus Contestable Amount</inlineHelpText>
    <label>Adjusted Amount For Distribution</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>