force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AdjustedBenefitStart__c.field-meta.xml
<CustomField>
    <fullName>cve__AdjustedBenefitStart__c</fullName>
    <label>Adjusted Benefit Start</label>
    <type>Date</type>
</CustomField>