force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AdjustedBenefitThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__AdjustedBenefitThrough__c</fullName>
    <label>Adjusted Benefit Through</label>
    <type>Date</type>
</CustomField>