force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AgeAtDateOfDeath__c.field-meta.xml
<CustomField>
    <fullName>cve__AgeAtDateOfDeath__c</fullName>
    <label>Age at Date of Death</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>