force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AgeInMonthsAtDod__c.field-meta.xml
<CustomField>
    <fullName>cve__AgeInMonthsAtDod__c</fullName>
    <label>Age in Months at Date of Disability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>