force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AirBagApplicable__c.field-meta.xml
<CustomField>
    <fullName>cve__AirBagApplicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Bag Applicable</label>
    <type>Checkbox</type>
</CustomField>