force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AirBagDecision__c.field-meta.xml
<CustomField>
    <fullName>cve__AirBagDecision__c</fullName>
    <label>Air Bag Decision</label>
    <type>Date</type>
</CustomField>