force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AirBagDenied__c.field-meta.xml
<CustomField>
    <fullName>cve__AirBagDenied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Bag Denied</label>
    <type>Checkbox</type>
</CustomField>