force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__AnticipatedRecovery__c.field-meta.xml
<CustomField>
    <fullName>cve__AnticipatedRecovery__c</fullName>
    <label>Anticipated Recovery</label>
    <type>Date</type>
</CustomField>