force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BaseCoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__BaseCoverageAmount__c</fullName>
    <label>Base Coverage Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>