force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Benefit__c.field-meta.xml
<CustomField>
    <fullName>cve__Benefit__c</fullName>
    <label>Benefit</label>
    <referenceTo>cve__Benefit__c</referenceTo>
    <relationshipLabel>Benefits Claimed</relationshipLabel>
    <relationshipName>BenefitClaimeds</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>