force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BenefitAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitAmount__c</fullName>
    <label>Benefit Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>