force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BenefitLookbackDate__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitLookbackDate__c</fullName>
    <label>Benefit Lookback Date</label>
    <type>Date</type>
</CustomField>