force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BenefitLookbackPeriod__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitLookbackPeriod__c</fullName>
    <label>Benefit Lookback Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>