force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BenefitStart__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitStart__c</fullName>
    <label>Benefit Start</label>
    <type>Date</type>
</CustomField>