force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BenefitStatutory__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitStatutory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Benefit Statutory</label>
    <type>Checkbox</type>
</CustomField>