force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BenefitThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__BenefitThrough__c</fullName>
    <label>Benefit Through</label>
    <type>Date</type>
</CustomField>