force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BothFeet__c.field-meta.xml
<CustomField>
    <fullName>cve__BothFeet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Both Feet</label>
    <type>Checkbox</type>
</CustomField>