force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__BothHands__c.field-meta.xml
<CustomField>
    <fullName>cve__BothHands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Both Hands</label>
    <type>Checkbox</type>
</CustomField>