force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CareerAdjustmentMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__CareerAdjustmentMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__CareerAdjustmentMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__CareerAdjustmentPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__CareerAdjustmentMaximum__c,  cve__Benefit__r.cve__CareerAdjustmentPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__CareerAdjustmentMaximum__c),
        cve__Benefit__r.cve__CareerAdjustmentMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__CareerAdjustmentPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__CareerAdjustmentPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Career Adjustment Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>