force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Cause__c.field-meta.xml
<CustomField>
    <fullName>cve__Cause__c</fullName>
    <label>Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Illness</fullName>
            </value>
            <value>
                <fullName>Retrenchment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>