force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CauseOfAccident__c.field-meta.xml
<CustomField>
    <fullName>cve__CauseOfAccident__c</fullName>
    <label>Cause of Accident</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
            <value>
                <fullName>Drowning</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Firearm</fullName>
            </value>
            <value>
                <fullName>Fire or Explosion</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other Accident</fullName>
            </value>
            <value>
                <fullName>Vehicular Accident</fullName>
            </value>
            <value>
                <fullName>Vehicular Accident - Driver of Car</fullName>
            </value>
            <value>
                <fullName>Vehicular Accident - Passenger of Car</fullName>
            </value>
            <value>
                <fullName>Workplace Accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>