force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CauseOfDeath__c.field-meta.xml
<CustomField>
    <fullName>cve__CauseOfDeath__c</fullName>
    <label>Cause of Death</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cve__MannerOfDeath__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>AIDS</fullName>
            </value>
            <value>
                <fullName>Alzheimer&apos;s</fullName>
            </value>
            <value>
                <fullName>Cancer</fullName>
            </value>
            <value>
                <fullName>Cancer - Bladder</fullName>
            </value>
            <value>
                <fullName>Cancer - Breast</fullName>
            </value>
            <value>
                <fullName>Cancer - Colon</fullName>
            </value>
            <value>
                <fullName>Cancer - Kidney</fullName>
            </value>
            <value>
                <fullName>Cancer - Lung</fullName>
            </value>
            <value>
                <fullName>Cancer - Lymphoma</fullName>
            </value>
            <value>
                <fullName>Cancer - Melanoma</fullName>
            </value>
            <value>
                <fullName>Cancer - Pancreatic</fullName>
            </value>
            <value>
                <fullName>Cancer - Prostate</fullName>
            </value>
            <value>
                <fullName>Cancer - Thyroid</fullName>
            </value>
            <value>
                <fullName>Catastrophic</fullName>
            </value>
            <value>
                <fullName>Cerebro-vascular Diseases</fullName>
            </value>
            <value>
                <fullName>Chronic Liver</fullName>
            </value>
            <value>
                <fullName>Chronic Lower Respiratory</fullName>
            </value>
            <value>
                <fullName>Crohn&apos;s Disease</fullName>
            </value>
            <value>
                <fullName>Dementia</fullName>
            </value>
            <value>
                <fullName>Diabetes Mellitus</fullName>
            </value>
            <value>
                <fullName>Drowning</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Fetal</fullName>
            </value>
            <value>
                <fullName>Firearm</fullName>
            </value>
            <value>
                <fullName>Fire or Explosion</fullName>
            </value>
            <value>
                <fullName>Heart Disease</fullName>
            </value>
            <value>
                <fullName>Homicide</fullName>
            </value>
            <value>
                <fullName>Homicide at Work</fullName>
            </value>
            <value>
                <fullName>Influenza/Pneumonia</fullName>
            </value>
            <value>
                <fullName>Kidney Disease</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>