force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CertifiedThrough__c.field-meta.xml
<CustomField>
    <fullName>cve__CertifiedThrough__c</fullName>
    <label>Certified Through</label>
    <type>Date</type>
</CustomField>