force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ChangeToOverpaymentBeforeTax__c.field-meta.xml
<CustomField>
    <fullName>cve__ChangeToOverpaymentBeforeTax__c</fullName>
    <inlineHelpText>Amount incremented to the before tax amount overpaid or underpaid.</inlineHelpText>
    <label>Change To Overpayment Before Tax</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>