force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ChangeToOverpaymentNet__c.field-meta.xml
<CustomField>
    <fullName>cve__ChangeToOverpaymentNet__c</fullName>
    <inlineHelpText>Amount incremented to the net amount overpaid or underpaid.</inlineHelpText>
    <label>Change To Overpayment Net</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>