force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ChildCareMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__ChildCareMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__ChildCareMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__ChildCarePercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__ChildCareMaximum__c,  cve__Benefit__r.cve__ChildCarePercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__ChildCareMaximum__c),
        cve__Benefit__r.cve__ChildCareMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__ChildCarePercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__ChildCarePercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Child Care Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>