force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ChildEducationMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__ChildEducationMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__ChildEducationAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__ChildEducationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__ChildEducationAmountMaximum__c,  cve__Benefit__r.cve__ChildEducationPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__ChildEducationAmountMaximum__c),
        cve__Benefit__r.cve__ChildEducationAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__ChildEducationPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__ChildEducationPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Child Education Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>