force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__Claim__c.field-meta.xml
<CustomField>
    <fullName>cve__Claim__c</fullName>
    <label>Claim</label>
    <referenceTo>cve__Claim__c</referenceTo>
    <relationshipLabel>Benefits Claimed</relationshipLabel>
    <relationshipName>BenefitClaimeds</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>