force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ClaimantInsuredName__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimantInsuredName__c</fullName>
    <inlineHelpText>All Claimant/Insured People (Contacts) or Organizations (Accounts). Edit via Claim Relationship objects.</inlineHelpText>
    <label>Claimant/Insured Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>