force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ClaimLevelJournal__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimLevelJournal__c</fullName>
    <formula>cve__Claim__r.cve__ClaimLevelJournal__c</formula>
    <label>Claim Level Journal</label>
    <type>Checkbox</type>
</CustomField>