force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ClaimLevelPaymentSpecification__c.field-meta.xml
<CustomField>
    <fullName>cve__ClaimLevelPaymentSpecification__c</fullName>
    <formula>cve__Claim__r.cve__ClaimLevelPaymentSpecification__c</formula>
    <label>Claim Level Payment Specification</label>
    <type>Checkbox</type>
</CustomField>