force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CognitiveImpairment__c.field-meta.xml
<CustomField>
    <fullName>cve__CognitiveImpairment__c</fullName>
    <label>Cognitive Impairment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Severe</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Mild</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>