force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ComaMaximum__c.field-meta.xml
<CustomField>
    <fullName>cve__ComaMaximum__c</fullName>
    <formula>IF (! ISNULL(cve__Benefit__r.cve__ComaAmountMaximum__c) &amp;&amp; ! ISNULL(cve__Benefit__r.cve__ComaPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
    MIN(cve__Benefit__r.cve__ComaAmountMaximum__c,  cve__Benefit__r.cve__ComaPercentageMaximum__c *  cve__CoverageAmount__c),
    IF (! ISNULL(cve__Benefit__r.cve__ComaAmountMaximum__c),
        cve__Benefit__r.cve__ComaAmountMaximum__c,
        IF (! ISNULL(cve__Benefit__r.cve__ComaPercentageMaximum__c) &amp;&amp; ! ISNULL(cve__CoverageAmount__c),
            cve__Benefit__r.cve__ComaPercentageMaximum__c * cve__CoverageAmount__c,
            null
        )
    )
)</formula>
    <label>Coma Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>