force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__ContestableAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__ContestableAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Portion amount to be withheld</description>
    <label>Contestable Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>