force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CoverageAmount__c.field-meta.xml
<CustomField>
    <fullName>cve__CoverageAmount__c</fullName>
    <label>Coverage Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>