force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CoverageAmountAfterAdjustments__c.field-meta.xml
<CustomField>
    <fullName>cve__CoverageAmountAfterAdjustments__c</fullName>
    <label>Coverage Amount After Adjustments</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>