force-app/main/default/objects/cve__BenefitClaimed__c/fields/cve__CoverageAmountAsOf__c.field-meta.xml
<CustomField>
    <fullName>cve__CoverageAmountAsOf__c</fullName>
    <label>Coverage Amount as of</label>
    <type>Date</type>
</CustomField>